ChangeLog: Updated ChangeLog document for XilIsf.
Signed-off-by: Tejas Prajapati Rameshchandra <tejaspra@xilinx.com>

Acked-for-series: Srinivas Goud <sgoud@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -85,6 +85,7 @@ Added support for Macronix 1G flash parts. (CR#978447)
 Removed checkpatch and GCC warnings.
 Added support for MT25QL01G flash from Micron (CR#1004264)
 Updated the library notes for Micron flash parts. (cr#973229)
+Added support for the low density ISSI flash parts. (PR#9237)
 
 Resetps_v1_2
 Fixed compilation warnings in resetps driver
