ChangeLog: Updated Changelog for gpiops
Signed-off-by: Arunima Mishra <anunima.mishra@xilinx.com>

Acked-for-series: Anirudha Sarangi <anirudh@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -13,6 +13,9 @@ Fix cppcheck and GCC warnings.
 emacps_v3_8:
 Fix cppcheck, GCC and doxygen warnings.
 
+gpiops_v3_4:
+Resolved cppcheck warnings.(CR#1006331)
+
 sdps_v3_6
 Fixed Cppcheck, Doxygen and gcc warnings (CR#1006375)
 Add initializer macro for HasEMIO
