ChangeLog: Updated the ChangeLog for xilflash.
Signed-off-by: Tejas Prajapati Rameshchandra <tejaspra@xilinx.com>

Acked-for-series: Naga Sureshkumar Relli <nagasure@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -137,6 +137,9 @@ Fix write on pmu global gen storage reg5
 csudma_v1_3:
 Fix Doxygen reported warnings
 
+xilflash_v4_5:
+Fixed compilation errors for ARMCC compiler(CR#1008306)
+
 zdma_v1_6:
 Fix Doxygen, cppcheck and coverity reported warnings.
 
