ChangeLog: Updated changelog for sdps driver
Signed-off-by: Manish Narani <manish.narani@xilinx.com>

Acked-for-series: Srinivas Goud <sgoud@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -21,6 +21,7 @@ Fixed Cppcheck, Doxygen and gcc warnings (CR#1006375)
 Add initializer macro for HasEMIO
 Add support for using 64Bit DMA in 32Bit Processor
 Add cache invalidation call before returning from ReadPolled API
+Resolve compilation warnings for ARMCC toolchain
 
 xilffs_v3_10:
 Fix Cppcheck and Doxygen warnings
