Changelog: Updated the Changelog for gpiops
Signed-off-by: Arunima Mishra <anunima.mishra@xilinx.com>

Acked-for-series: Srinivas Goud <sgoud@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -15,6 +15,7 @@ Fix cppcheck, GCC and doxygen warnings.
 
 gpiops_v3_4:
 Resolved cppcheck warnings.(CR#1006331)
+Resolved MISRA-C mandatory violations.(CR#1007751)
 
 sdps_v3_6
 Fixed Cppcheck, Doxygen and gcc warnings (CR#1006375)
