emacps: Remove duplicate definition of XEmacPs_BdSetLength
Remove duplicate macro definition.

Signed-off-by: Harini Katakam <harini.katakam@xilinx.com>
Acked-by: Radhey Shyam Pandey <radhey.shyam.pandey@xilinx.com>

Acked-by: Radhey Shyam Pandey <radhey.shyam.pandey@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -12,6 +12,7 @@ Fix cppcheck and GCC warnings.
 
 emacps_v3_8:
 Fix cppcheck, GCC and doxygen warnings.
+Remove duplicate code in xemacps_bd.h
 
 gpiops_v3_4:
 Resolved cppcheck warnings.(CR#1006331)
