--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -154,6 +154,7 @@ Fixed compilation errors for ARMCC compiler(CR#1008306)
 
 zdma_v1_6:
 Fix Doxygen, cppcheck and coverity reported warnings.
+Fixed MISRA-C mandatory violations.(CR#1007757)
 
 axiethernet_v5_8:
 Fix cppcheck and gcc warnings.
