Changelog: Updated the Changelog for uartps
Signed-off-by: Arunima Mishra <anunima.mishra@xilinx.com>

Acked-for-series: Srinivas Goud <sgoud@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -105,6 +105,9 @@ usbpsu_v1_4
 Fixed the errors which occur when tested with IAR compiler
 Added the new examples into mss file
 
+uartps_v3_7:
+Resolved MISRA-C mandatory violations.(CR#1007755)
+
 xilfpga_v4_2
 Refactor the xilfpga library to support different PL programming Interfaces.
 Added support for readback of PL configuration data.
