--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -113,6 +113,7 @@ Refactor the xilfpga library to support different PL programming Interfaces.
 Added support for readback of PL configuration data.
 Added Support to load the vivado generated .bit and .bin files.
 Added example for loading partial reconfiguration bitstreams.
+Modified the PL data handling Logic to support different PL programming interfaces.
 
 standalone_v6_8:
 Fixed compilation warnings in xil_cache.c.(CR#1005118)
