--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -162,6 +162,9 @@ Fixed MISRA-C mandatory violations.(CR#1007757)
 axiethernet_v5_8:
 Fix cppcheck and gcc warnings.
 
+wdtps_v3_1:
+Fix interrupt ID conflict issue in example.
+
 Changes for 2018.2
 ===============================
 freertos10_xilinx_v1_1:
