--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -174,6 +174,7 @@ Fix write on pmu global gen storage reg5
 
 csudma_v1_3:
 Fix Doxygen reported warnings
+Fixed misra-c required standard violations.
 
 xilflash_v4_5:
 Fixed compilation errors for ARMCC compiler(CR#1008306)
