--- a/lib/bsp/standalone/src/changelog.txt
+++ b/lib/bsp/standalone/src/changelog.txt
@@ -558,4 +558,6 @@
  *                      correctly in 32 bit processor.It fixes CR#1007207.
  * 6.8 aru    09/03/18  Optimized the code to use a single function and removed
  *                      code redundancy in xil_printf.c . It Fixes CR#1009654.
+ * 6.8 aru    09/06/18  Removed the compiler warnings for ARMCC toolchain.
+ *                      It fixes CR#1008309.
  *****************************************************************************************/
