ChangeLog: Updated changelog for xilffs
Signed-off-by: Manish Narani <manish.narani@xilinx.com>

Acked-for-series: Srinivas Goud <sgoud@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -31,6 +31,8 @@ Upgraded the FatFS version to 0.13b
 Fix Cppcheck and Doxygen warnings
 Modify sector buffer alignment to that of cache line supported
 SD Example - Change file size to 8MB from 8KB for ZynqMP platform
+Modify tcl file to create FILE_SYSTEM_INTERFACE_SD in xparameters.h only once
+if there are multiple instances of SD
 
 clockps_v1_0:
 First release of clocksPS drivers.
