ChangeLog: Updated changelog for adding vaux example in sysmon
Signed-off-by: Manish Narani <manish.narani@xilinx.com>

Acked-for-series: Srinivas Goud <sgoud@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -5,6 +5,9 @@ sysmonpsu_v2_5:
 Fixed Cppcheck warnings
 Modified code for MISRA-C:2012 Compliance.
 
+sysmon_v7_5:
+Added Example for Vaux external channels
+
 axidma_v9_8:
 Fix cppcheck, gcc and doxygen warnings.
 
