lwip: Update copyright content and years
This patch fixes the following:
- Copyright text for Xilinx files in lwip adapter
- Copyright years for all source and example files
- Extra spaces and typos in older copyright text in a few places
- Adds missing copyright for autogenerated lwipopts file through tcl

Signed-off-by: Harini Katakam <harini.katakam@xilinx.com>
Acked-by: Ajay Yugalkishore Pandey <APANDEY@xilinx.com>

Acked-by: Ajay Yugalkishore Pandey <APANDEY@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -43,6 +43,7 @@ lwip202_v1_2:
 Add mcdma support and handle IEEE_1588 for AXI Phy in ethernet header.
 Add AXI 2.5G Ethernet support.
 Fix axiethernet apps build error by removing dependency on HSI get_connected_intr_cntrl API output.
+Fix copyrights.
 
 mcdma_v1_2:
 Add API XMcdma_LookupConfigBaseAddr() to lookup config by base address.
