ChangeLog: Update the changelog for FatFS updates in xilffs
Signed-off-by: Manish Narani <manish.narani@xilinx.com>

Acked-for-series: Srinivas Goud <sgoud@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -34,6 +34,7 @@ SD Example - Change file size to 8MB from 8KB for ZynqMP platform
 Modify tcl file to create FILE_SYSTEM_INTERFACE_SD in xparameters.h only once
 if there are multiple instances of SD
 Add Word Access support in latest FatFS source
+Update the bug fixes on 0.13b FatFS
 
 clockps_v1_0:
 First release of clocksPS drivers.
