emacps: Fix PTP interrupt masks and cleanup stale comments
This patch fixes the PTP interrupt masks. The mask names are
retained to make sure users are not affected.

Also cleanup a stale comment that states that we use single bursts.

Signed-off-by: Harini Katakam <harini.katakam@xilinx.com>
Acked-by: Radhey Shyam Pandey <radhey.shyam.pandey@xilinx.com>

Acked-by: Radhey Shyam Pandey <radhey.shyam.pandey@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -17,6 +17,7 @@ Fix cppcheck and GCC warnings.
 emacps_v3_8:
 Fix cppcheck, GCC and doxygen warnings.
 Remove duplicate code in xemacps_bd.h
+Fixed PTP interrupt masks and cleaned up comments.
 
 gpiops_v3_4:
 Resolved cppcheck warnings.(CR#1006331)
