lwip: Use -hier option while using get_cells command
Use -hier option while using get_cells command to support hierarchical designs.
Acked-by: Harini Katakam <harini.katakam@xilinx.com>

Acked-by: Harini Katakam <harini.katakam@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -48,6 +48,7 @@ Add mcdma support and handle IEEE_1588 for AXI Phy in ethernet header.
 Add AXI 2.5G Ethernet support.
 Fix axiethernet apps build error by removing dependency on HSI get_connected_intr_cntrl API output.
 Fix copyrights.
+In tcl update get_cells API argument to support hierarchical designs.
 
 lwip_echo_server:
 Fix warning in iic phy reset in lwip echo server.
