--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -52,6 +52,7 @@ In tcl update get_cells API argument to support hierarchical designs.
 
 lwip_echo_server:
 Fix warning in iic phy reset in lwip echo server.
+Fixed gcc compilation warning for zynqmp platform.(CR#1011020)
 
 mcdma_v1_2:
 Add API XMcdma_LookupConfigBaseAddr() to lookup config by base address.
