--- a/lib/bsp/standalone/src/changelog.txt
+++ b/lib/bsp/standalone/src/changelog.txt
@@ -560,4 +560,6 @@
  *                      code redundancy in xil_printf.c . It Fixes CR#1009654.
  * 6.8 aru    09/06/18  Removed the compiler warnings for ARMCC toolchain.
  *                      It fixes CR#1008309.
+ * 6.8 mus    09/20/18  Updated CortexR5 boot code to initialize CortexR5 core with LOVEC
+ *                      on reset. It fixes CR#1010656.
  *****************************************************************************************/
