ChangeLog: Updated ChangeLog for rtcpsu.
Signed-off-by: Tejas Prajapati Rameshchandra <tejaspra@xilinx.com>

Acked-for-series: Srinivas Goud <sgoud@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -163,6 +163,7 @@ Modified logic to get the last day of month correctly.(CR#1004282)
 Removed Checkpatch warnings.
 Resolved cppcheck and doxygen warnings.
 Resolved MISRA-C mandatory violations.(CR#1007752)
+Fixed compilation warnings.
 
 usbpsu_v1_4
 Fixed the errors which occur when tested with IAR compiler
