XilSkey: Added support APIs to program eFUSE from Linux
This patch provides wrapper APIs to provide support for
eFUSE programming from Linux, where this APIs are accessed
via SMC calls

Signed-off-by: VNSL Durga <vnsldurg@xilinx.com>

Acked-for-series: Kalyani Akula <kalyani.akula@xilinx.com>

--- a/lib/sw_services/xilskey/src/changelog.txt
+++ b/lib/sw_services/xilskey/src/changelog.txt
@@ -129,5 +129,7 @@
 * 6.5    vns  03/16/18 Fixed hanging issue when program/zeroise is requested
 *                      while programming mode in enabled state.
 * 6.6    vns  06/06/18 Added doxygen tags
+*        vns  09/18/18 Added support API for programming zynqmp efuseps from
+*		       Linux
 *
  ********************************************************************************/
