--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -19,6 +19,14 @@ Fix cppcheck, gcc and doxygen warnings.
 Changed the Canfd ID with 11 bit value.
 Fixed Selftest Hang issue (CR#1009802)
 
+canfd_v1_3:
+Fix cppcheck, gcc and doxygen warnings.
+Changed the Canfd ID with 11 bit value.
+
+canfd_v2_0:
+Added support for canfd 2.0 spec regarding PL
+SoftIP.
+
 emacps_v3_8:
 Fix cppcheck, GCC and doxygen warnings.
 Remove duplicate code in xemacps_bd.h
