ChangeLog: Update changelog for SDPS for changes related to CMD3
Signed-off-by: Manish Narani <manish.narani@xilinx.com>

Acked-for-series: Srinivas Goud <sgoud@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -34,6 +34,7 @@ Add initializer macro for HasEMIO
 Add support for using 64Bit DMA in 32Bit Processor
 Add cache invalidation call before returning from ReadPolled API
 Resolve compilation warnings for ARMCC toolchain
+Change Expected Response for CMD3 to R1 for MMC
 
 xilffs_v4_0:
 Upgraded the FatFS version to 0.13b
