emacps: Fix warning for redefining interrupt number
Fix warning for redefining interrupt number. Since the emacps device ID
is picked from canonical definition, use an interrupt number to be in
sync with that.

Signed-off-by: Harini Katakam <harini.katakam@xilinx.com>
Acked-by: Radhey Shyam Pandey <radhey.shyam.pandey@xilinx.com>

Acked-by: Radhey Shyam Pandey <radhey.shyam.pandey@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -23,6 +23,7 @@ emacps_v3_8:
 Fix cppcheck, GCC and doxygen warnings.
 Remove duplicate code in xemacps_bd.h
 Fixed PTP interrupt masks and cleaned up comments.
+Fix warning in example for redefinition of interrupt number.
 
 gpiops_v3_4:
 Resolved cppcheck warnings.(CR#1006331)
