--- a/lib/bsp/standalone/src/changelog.txt
+++ b/lib/bsp/standalone/src/changelog.txt
@@ -562,4 +562,6 @@
  *                      It fixes CR#1008309.
  * 6.8 mus    09/20/18  Updated CortexR5 boot code to initialize CortexR5 core with LOVEC
  *                      on reset. It fixes CR#1010656.
+ * 6.8 mus    10/04/18  Updated microblaze sleep functinality to execute default method of
+ *                      sleep implementation, incase of FreeRTOS BSP.
  *****************************************************************************************/
