--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -180,6 +180,13 @@ Fix GCC,cppcheck and doxygen warnings in driver
 and example. It fixes CR#1006344 and CR#1010947.
 Update scugic tcl to add -hier option while
 using get_cells command. It fixes CR#1011395.
+Updated get_psu_interrupt_id proc to return multiple
+interrupt ID's, in case if specific interrupt port of
+PL based IP is connected to the pl_ps_irq0 as well as
+pl_ps_irq1 directly or through same concat block pin.
+Fix for CR#100266.
+Updated get_psu_interrupt_id proc, to fix interrupt id
+computation for vectored interrupts. It fixes CR#998583
 
 tmrctr_v4_6:
 Updated driver examples to call TmrCtrDisableIntr
