XilSKey: Added support for SPK ID re-programming
Currently library doesn't allow to re-program
the SPKID when it has a non-zero value, this patch
fixes to allow SPK ID re-programming, without
reverting already programmed bits. If one requests
to revert the programmed SPK ID, library throws an
error.

Signed-off-by: Durga Challa <vnsl.durga.challa@xilinx.com>

Acked-for-series: Kalyani Akula <kalyani.akula@xilinx.com>

Acked-for-series: Kalyani Akula <kalyani.akula@xilinx.com>

--- a/lib/sw_services/xilskey/src/changelog.txt
+++ b/lib/sw_services/xilskey/src/changelog.txt
@@ -131,5 +131,8 @@
 * 6.6    vns  06/06/18 Added doxygen tags
 *        vns  09/18/18 Added support API for programming zynqmp efuseps from
 *		       Linux
+*                      Added APIs to support PUF regeneration
+*        vns  10/11/18 Added support for re-programming SPKID without reverting
+*                      exisiting programmed bits.
 *
  ********************************************************************************/
