--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -35,6 +35,14 @@ Removed deprecated APIS: XVphy_DrpWrite and XVphy_DrpRead
 Added/Moved APIs XVphy_SetTxVoltageSwing and XVphy_SetTxPreEmphasis from xvphy_i.c/h
 Added XVphy_SetTxPostCursor API in xvphy.h
 
+freertos10_xilinx_v1_2:
+Updated FreeRTOS tcl to add -hier option while using get_cells command.
+It fixes CR#1011395.
+Added Xilinx copyright to files containing xilinx code
+and retain FreeRTOS license text as-is. Also, added
+FreeRTOS copyright in porting files which uses FreeRTOS
+code, wherever it is missing.
+
 hdcp1x_v4_2:
 Addded hdcp14_PropagateTopoErrUpstream flag to track topology failures and ready the topology for the repeater application to read.
 Updated the XHdcp1x_TxPollForWaitForReady function to ready topology in case of a topology error, and make it available in XHdcp1x_TxGetTopology().
