v_frmbuf_wr: Revisited flushing sequence.
Multiple stops in memory based HLS IP drivers causes incorrect behaviour
in the IP.

This issue is occuring due to unavailability of idle bit status in
XVFrmbufWr_Stop function.

Rearranged XVFrmbufWr_Stop function, such a way that it does clear the start
and autorestart bits prior to flush the IP and wait for idle bit to be set.
But Idle bit is not set after flushing until application does hard reset
using external GPIO.

As PG stated(under register space section) that software need to hard reset the
IP upon frambuffer flushing. We have partitioned the frmbuf_stop function
into two APIs:
        - XVFrmbufWr_Stop: does the clearing of start and auto restart bits,
          flush the IP.
        - XVFrmbufWr_WaitForIdle: waits for the idle bit to be set.

User need to hard reset the IP between these two APIs as suggested in the PG
whenever flushing bit is being set.

Signed-off-by: Praveen Vuppala <praveen.vuppala@xilinx.com>

Acked-for-series: Vishal Sagar <vishal.sagar@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,5 +1,9 @@
 Changes for 2018.3
 ===============================
+v_frmbuf_wr_v4_0:
+Added new API, This API is used to wait for IP to enter into idle state.
+Modified existing Stop API to support Flushing feature.
+
 v_frmbuf_rd_v4_0:
 Added new API, This API is used to wait for IP to enter into idle state.
 Modified existing Stop API to support Flushing feature.
