v_mix: Revisited flushing sequence.
Multiple stops in memory based HLS IP drivers causes incorrect behaviour
in the IP.

Rearranged XVMix_Stop function, such a way that it does clear the start and
autorestart bits, flush the IP and wait for idle bit to be set. But Idle bit
is not set after flushing until application does hard reset using external GPIO.

As PG stated(under register space section) that software need to hard
reset the IP upon flushing. Rearranging XVMix_Stop function,
it does the clearing of start and auto restart bits prior to flush the IP.

Signed-off-by: Praveen Vuppala <praveen.vuppala@xilinx.com>

Acked-for-series: Vishal Sagar <vishal.sagar@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,5 +1,8 @@
 Changes for 2018.3
 ===============================
+v_mix_v5_0:
+Modified existing Stop API for flush feature.
+
 v_frmbuf_wr_v4_0:
 Added new API, This API is used to wait for IP to enter into idle state.
 Modified existing Stop API to support Flushing feature.
