v_scenechange: Revisited flushing sequence.
Multiple stops in memory based HLS IP drivers causes incorrect behaviour
in the IP.

This issue is occuring due to unavailability of idle bit status in
XV_scenechange_Stop function.

Rearranged XV_scenechange_Stop function such a way that it does clear the start
and autorestart bits prior to flush the IP and wait for idle bit to be set. But Idle
bit is not set after flushing until application does hard reset using external GPIO.

As PG stated(under register space section) that software need to hard reset the
IP upon flushing. We have partitioned the XV_scenechange_Stop function into two
APIs:
        - XV_scenechange_Stop: does the clearing of start and auto restart bits,
          flush the IP.
        - XV_scenechange_WaitForIdle: waits for the idle bit to be set.

Software needs to hard reset the IP between these two APIs as suggested in the PG
whenever flushing bit is being set.

Signed-off-by: Praveen Vuppala <praveen.vuppala@xilinx.com>

Acked-for-series: Vishal Sagar <vishal.sagar@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,5 +1,8 @@
 Changes for 2018.3
 ===============================
+v_scenechange_v1_0:
+Initial release for SceneChange IP.
+
 v_mix_v5_0:
 Modified existing Stop API for flush feature.
 
