ChangeLog: Updated for Zynq-Fsbl
Updated changelog for 2018.3 changes in zynq-fsbl.

Signed-off-by: Kalyani Akula <kalyani.akula@xilinx.com>

Acked-for-series: Krishna Chaitanya Patakamuri <krishna.chaitanya.patakamuri@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -312,6 +312,8 @@ ipipsu_v2_4:
 Fix Doxygen reported warnings.
 Fix Gcc warnings.
 
+zynq_fsbl:
+Added code to check EFUSE_SEC_EN bit and force encryption.
 
 Changes for 2018.2
 ===============================
