--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -363,6 +363,23 @@ Add 32 channel support.
 Add support for channel status extraction logic both on embed and extract side.
 Add APIs to detect group change, sample rate change, active channel change.
 
+xilsecure_v3_2:
+Added error if input data is greater than key modulus while performing
+RSA private decryption
+Added support for SHA to accept data, if data is/isn't 4 bytes aligned,
+if address is/isn't not word aligned and no restrictions for data size.
+Removed conditional compilation for PMU in xsecure.c and xsecure.h
+Fixed compilation warnings
+Added supportive APIs to encrypt/decrypt the data blobs from Linux/U-boot
+
+xilskey_v6_6:
+Modified PUF example's macro names
+Fixed armcc compiler errors
+Added supportive APIs to program efuse from Linux via smc calls
+Added support for PUF regeneration
+Fixed compilation warnings
+Added doxygen tags
+
 Changes for 2018.2
 ===============================
 freertos10_xilinx_v1_1:
