ChangeLog: Updated for axiethernet
Signed-off-by: Radhey Shyam Pandey <radhey.shyam.pandey@xilinx.com>

Acked-for-series: Appana Durga Kedareswara rao <appana.durga.rao@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -364,6 +364,7 @@ axiethernet_v5_8:
 Fix cppcheck and gcc warnings.
 Update tcl to improve error message for non-supported designs.
 Fix interrupt ID generation for ZynqMP designs.
+In SG axidma interrupt example, fix 'committing RxBD to HW' error.
 
 wdtps_v3_1:
 Fix interrupt ID conflict issue in example.
