ChangeLog: Updated for axiethernet and xxvethernet drivers
Signed-off-by: Radhey Shyam Pandey <radhey.shyam.pandey@xilinx.com>

Acked-for-series: Appana Durga Kedareswara rao <appana.durga.rao@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,11 @@
+Changes for 2019.1
+===============================
+axiethernet_v5_9:
+In tcl use unique global variables to fix bsp generation for certain designs.
+
+xxvethernet_v1_2:
+In tcl use unique global variables to fix bsp generation for certain designs.
+
 Changes for 2018.3
 ===============================
 dp12_v7_0:
