ChangeLog: Updated for emaclite driver
Signed-off-by: Radhey Shyam Pandey <radhey.shyam.pandey@xilinx.com>
Acked-for-series: Appana Durga Kedareswara rao <appana.durga.rao@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -3,6 +3,9 @@ Changes for 2019.1
 axiethernet_v5_9:
 In tcl use unique global variables to fix bsp generation for certain designs.
 
+emaclite_v4_4:
+Fix poll example failure on microblaze platform.
+
 xxvethernet_v1_2:
 In tcl use unique global variables to fix bsp generation for certain designs.
 
