nandpsu: Fix compilation warnings
Fixed compilation warnings specified below,

xnandpsu_bbm.c:122:2: warning: 'strcpy' writing 5 bytes
into a region of size 4 overflows the destination
[-Wstringop-overflow=]
xnandpsu_bbm.c:152:2: warning: 'strcpy' writing 5 bytes
into a region of size 4 overflows the destination
[-Wstringop-overflow=]
xnandpsu.c:2240:48: warning: unused parameter
'InstancePtr' [-Wunused-parameter]
xnandpsu.c:2240:65: warning: unused parameter 'ClockFreq'
[-Wunused-parameter]

Signed-off-by: Mubin Usman Sayyed <mubin.usman.sayyed@xilinx.com>

Acked-for-series: Anirudha Sarangi <anirudh@xilinx.com>

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -161,7 +161,8 @@ In driver tcl update get_cells API to support hierarchical designs.
 Added 64 bit DMA addresses support for Microblaze-X
 
 nandpsu_v1_5:
-Added 64 bit DMA addresses support for Microblaze-X
+Added 64 bit DMA addresses support for Microblaze-X.
+Updated driver source code to fix compilation warnings.
 
 cpu_v2_8:
 Added Os and LTO settings in extra compiler flags for PMU BSP
